Pushing a update since I have not done one in some time

--- a/uthinx/.yo-rc.json
+++ b/uthinx/.yo-rc.json
@@ -1,16 +1,16 @@
 {
-  "generator-bbb": {
-    "name": "y",
-    "testFramework": "jasmine",
-    "moduleStyle": "amd",
-    "indent": {
-      "style": "space",
-      "size": 4
-    },
-    "paths": {
-      "base": ".",
-      "tests": "test",
-      "modules": "app/modules"
-    }
-  }
-}
+   "generator-bbb": {
+     "name": "uthinx",
+     "testFramework": "mocha",
+     "moduleStyle": "amd",
+     "indent": {
+       "style": "space",
+       "size": 4
+     },
+     "paths": {
+       "base": ".",
+       "tests": "test",
+       "modules": "app/modules"
+     }
+   }
+ }
